--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -37,7 +37,8 @@
   },
   "peerDependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "swr-store": "^0.0.0"
   },
   "scripts": {
     "prepublish": "pridepack build",
@@ -47,5 +48,19 @@
     "test": "pridepack test --passWithNoTests",
     "clean": "pridepack clean",
     "watch": "pridepack watch"
+  },
+  "description": "React bindings for swr-store",
+  "author": "Alexis Munsayac",
+  "private": false,
+  "repository": {
+    "url": "https://github.com/lxsmnsyc/swr-store.git",
+    "type": "git"
+  },
+  "homepage": "https://github.com/lxsmnsyc/swr-store",
+  "bugs": {
+    "url": "https://github.com/lxsmnsyc/swr-store/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
