--- a/packages/swr-store/package.json
+++ b/packages/swr-store/package.json
@@ -21,12 +21,12 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "eslint": "^7.12.1",
+    "@types/node": "^14.14.9",
+    "eslint": "^7.14.0",
     "eslint-config-lxsmnsyc": "^0.1.19",
-    "pridepack": "^0.3.6",
+    "pridepack": "^0.3.7",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "prepublish": "pridepack build",
@@ -50,5 +50,8 @@
     "access": "public"
   },
   "author": "Alexis Munsayac",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "dequal": "^2.0.2"
+  }
 }
