--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -20,24 +20,17 @@
     "imports": "./dist/react-swr-store.esm.js"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/react-hooks": "^3.4.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.56",
-    "eslint": "^7.12.1",
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "eslint": "^7.14.0",
     "eslint-config-lxsmnsyc": "^0.1.19",
-    "pridepack": "^0.3.6",
+    "pridepack": "^0.3.7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-test-renderer": "^17.0.1",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.2"
   },
   "peerDependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "swr-store": "^0.0.0"
   },
   "scripts": {
@@ -62,5 +55,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@lyonph/react-hooks": "^0.1.2"
   }
 }
