--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -57,6 +57,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@lyonph/react-hooks": "^0.1.2"
+    "react-external-subject": "^0.2.0",
+    "use-dispose": "^0.4.0"
   }
 }
