--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -57,7 +57,6 @@
     "access": "public"
   },
   "dependencies": {
-    "react-external-subject": "^0.2.0",
-    "use-dispose": "^0.4.0"
+    "@lyonph/react-hooks": "^0.2.0"
   }
 }
