--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -30,7 +30,7 @@
     "typescript": "^4.1.2"
   },
   "peerDependencies": {
-    "react": "^17.0.1",
+    "react": "^16.8.0 || ^17.0.0",
     "swr-store": "^0.0.0"
   },
   "scripts": {
@@ -57,6 +57,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@lyonph/react-hooks": "^0.2.0"
+    "@lyonph/react-hooks": "^0.2.2"
   }
 }
