--- a/packages/swr-store/package.json
+++ b/packages/swr-store/package.json
@@ -1,7 +1,12 @@
 {
   "version": "0.5.2",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
+  },
   "files": [
     "dist",
     "src"
@@ -14,22 +19,17 @@
     "pridepack"
   ],
   "name": "swr-store",
-  "module": "dist/swr-store.esm.js",
-  "exports": {
-    "require": "./dist/index.js",
-    "imports": "./dist/swr-store.esm.js"
-  },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.14",
-    "eslint": "^7.16.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.34",
+    "eslint": "^7.22.0",
     "eslint-config-lxsmnsyc": "^0.1.20",
-    "pridepack": "^0.6.0",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
+    "pridepack": "^0.8.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   },
   "scripts": {
-    "prepublish": "pridepack build",
+    "prepublish": "pridepack clean && pridepack build",
     "build": "pridepack build",
     "type-check": "pridepack check",
     "lint": "pridepack lint",
