--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -1,7 +1,12 @@
 {
   "version": "0.5.2",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
+  },
   "files": [
     "dist",
     "src"
@@ -14,27 +19,23 @@
     "pridepack"
   ],
   "name": "react-swr-store",
-  "module": "dist/react-swr-store.esm.js",
-  "exports": {
-    "require": "./dist/index.js",
-    "imports": "./dist/react-swr-store.esm.js"
-  },
   "devDependencies": {
-    "@types/node": "^14.14.14",
-    "@types/react": "^17.0.0",
-    "eslint": "^7.16.0",
+    "@types/node": "^14.14.34",
+    "@types/react": "^17.0.3",
+    "eslint": "^7.22.0",
     "eslint-config-lxsmnsyc": "^0.1.20",
-    "pridepack": "^0.6.0",
+    "pridepack": "^0.8.0",
     "react": "^17.0.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
+    "swr-store": "0.5.2",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
     "swr-store": "^0.0.0"
   },
   "scripts": {
-    "prepublish": "pridepack build",
+    "prepublish": "pridepack clean && pridepack build",
     "build": "pridepack build",
     "type-check": "pridepack check",
     "lint": "pridepack lint",
@@ -57,6 +58,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@lyonph/react-hooks": "^0.2.2"
+    "@lyonph/react-hooks": "^0.3.3"
   }
 }
