--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -50,7 +50,7 @@
     "url": "https://github.com/lxsmnsyc/swr-store.git",
     "type": "git"
   },
-  "homepage": "https://github.com/lxsmnsyc/swr-store",
+  "homepage": "https://github.com/lxsmnsyc/swr-store/tree/main/packages/react-swr-store",
   "bugs": {
     "url": "https://github.com/lxsmnsyc/swr-store/issues"
   },
@@ -58,6 +58,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@lyonph/react-hooks": "^0.3.3"
+    "@lyonph/react-hooks": "^0.3.5",
+    "react-store-adapter": "^0.2.1",
+    "swr-store": "^0.6.0"
   }
 }
