--- a/packages/react-swr-store/package.json
+++ b/packages/react-swr-store/package.json
@@ -59,7 +59,6 @@
   },
   "dependencies": {
     "@lyonph/react-hooks": "^0.3.5",
-    "react-store-adapter": "^0.2.1",
-    "swr-store": "^0.6.0"
+    "react-store-adapter": "^0.2.1"
   }
 }
