--- a/examples/react-swr-store/package.json
+++ b/examples/react-swr-store/package.json
@@ -1,27 +1,25 @@
 {
   "name": "react-swr-store-vite",
-  "version": "0.6.0",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "type-check": "tsc --noEmit"
+    "serve": "vite preview"
   },
   "dependencies": {
-    "@pika/react": "^16.13.1",
-    "@pika/react-dom": "^16.13.1",
-    "react": "npm:@pika/react",
-    "react-dom": "npm:@pika/react-dom",
-    "react-swr-store": "0.6.0",
-    "swr-store": "0.6.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "swr-store": "0.6.0",
+    "react-swr-store": "0.6.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "eslint": "^7.14.0",
-    "eslint-config-lxsmnsyc": "^0.1.19",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.9",
-    "vite-plugin-react": "^3.0.2"
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.22.0",
+    "eslint-config-lxsmnsyc": "^0.1.20",
+    "typescript": "^4.2.3",
+    "vite": "^2.1.1"
   },
   "private": true
 }
