--- a/packages/swr-store/package.json
+++ b/packages/swr-store/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
-    "eslint": "^77.24.0",
+    "eslint": "^7.24.0",
     "eslint-config-lxsmnsyc": "^0.2.1",
     "pridepack": "^0.9.2",
     "tslib": "^2.2.0",
@@ -52,6 +52,7 @@
   "author": "Alexis Munsayac",
   "private": false,
   "dependencies": {
-    "dequal": "^2.0.2"
+    "dequal": "^2.0.2",
+    "superjson": "^1.7.4"
   }
 }
