--- a/examples/preact-swr-store/package.json
+++ b/examples/preact-swr-store/package.json
@@ -12,11 +12,11 @@
     "swr-store": "0.9.1"
   },
   "devDependencies": {
-    "@prefresh/vite": "^2.2.1",
+    "@preact/preset-vite": "^2.1.0",
     "eslint": "^7.24.0",
     "eslint-config-lxsmnsyc": "^0.2.1",
     "typescript": "^4.2.4",
-    "vite": "^2.2.1"
+    "vite": "^2.2.4"
   },
   "private": true
 }
