--- a/packages/swr-store/package.json
+++ b/packages/swr-store/package.json
@@ -1,11 +1,39 @@
 {
   "version": "0.9.4",
   "types": "dist/types/index.d.ts",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/cjs/production/index.js",
+  "module": "dist/esm/production/index.js",
   "exports": {
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/esm/index.js"
+    ".": {
+      "development": {
+        "require": "./dist/cjs/development/index.js",
+        "import": "./dist/esm/development/index.js"
+      },
+      "require": "./dist/cjs/production/index.js",
+      "import": "./dist/esm/production/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./dev": {
+      "production": {
+        "require": "./dist/cjs/production/index.js",
+        "import": "./dist/esm/production/index.js"
+      },
+      "require": "./dist/cjs/development/index.js",
+      "import": "./dist/esm/development/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./esm": {
+      "development": "./dist/esm/development/index.js",
+      "production": "./dist/esm/production/index.js",
+      "default": "./dist/esm/production/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./cjs": {
+      "development": "./dist/cjs/development/index.js",
+      "production": "./dist/cjs/production/index.js",
+      "default": "./dist/cjs/production/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
   },
   "files": [
     "dist",
@@ -20,13 +48,12 @@
   ],
   "name": "swr-store",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/node": "^16.10.1",
-    "eslint": "^7.32.0",
-    "eslint-config-lxsmnsyc": "^0.3.0",
-    "pridepack": "^0.12.2",
+    "@types/node": "^17.0.9",
+    "eslint": "^8.7.0",
+    "eslint-config-lxsmnsyc": "^0.4.0",
+    "pridepack": "^1.0.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "prepublish": "pridepack clean && pridepack build",
@@ -52,7 +79,6 @@
   "author": "Alexis Munsayac",
   "private": false,
   "dependencies": {
-    "dequal": "^2.0.2",
-    "ecmason": "^0.2.1"
+    "dequal": "^2.0.2"
   }
 }
