--- a/packages/solid-swr-store/package.json
+++ b/packages/solid-swr-store/package.json
@@ -53,7 +53,7 @@
     "eslint": "^8.7.0",
     "eslint-config-lxsmnsyc": "^0.4.0",
     "pridepack": "^1.0.4",
-    "solid-js": "^1.3.3",
+    "solid-js": "^1.3.10",
     "swr-store": "0.10.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
@@ -71,7 +71,7 @@
     "clean": "pridepack clean",
     "watch": "pridepack watch"
   },
-  "description": "React bindings for swr-store",
+  "description": "SolidJS bindings for swr-store",
   "author": "Alexis Munsayac",
   "private": false,
   "repository": {
