--- a/packages/swr-store/package.json
+++ b/packages/swr-store/package.json
@@ -12,27 +12,6 @@
       "require": "./dist/cjs/production/index.js",
       "import": "./dist/esm/production/index.js",
       "types": "./dist/types/index.d.ts"
-    },
-    "./dev": {
-      "production": {
-        "require": "./dist/cjs/production/index.js",
-        "import": "./dist/esm/production/index.js"
-      },
-      "require": "./dist/cjs/development/index.js",
-      "import": "./dist/esm/development/index.js",
-      "types": "./dist/types/index.d.ts"
-    },
-    "./esm": {
-      "development": "./dist/esm/development/index.js",
-      "production": "./dist/esm/production/index.js",
-      "default": "./dist/esm/production/index.js",
-      "types": "./dist/types/index.d.ts"
-    },
-    "./cjs": {
-      "development": "./dist/cjs/development/index.js",
-      "production": "./dist/cjs/production/index.js",
-      "default": "./dist/cjs/production/index.js",
-      "types": "./dist/types/index.d.ts"
     }
   },
   "files": [
@@ -81,5 +60,12 @@
   "private": false,
   "dependencies": {
     "dequal": "^2.0.2"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/types/index.d.ts"
+      ]
+    }
   }
 }
